# emprestimo_biblioteca_api

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
api_emprestimo_biblioteca/: api.py  asgi.py  settings.py  urls.py  wsgi.py
core/: api.py  core.py  models.py
core/migrations/: 0001_initial.py  0002_alter_usuario_cpf.py
emprestimo/: admin.py  api.py  models.py
emprestimo/migrations/: 0001_initial.py  0002_alter_livro_ano_publicacao.py
